kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: kubernetes
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend  
        name: backend-pod 
        namespace: kubernetes
    spec:
      containers:
      - name: backend-chatapp
        image: mayrhatte09/chatapp-backend:latest
        ports:
        - containerPort: 5001
