kubernetes/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: kubernetes
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb  
        name: mongodb-pod 
        namespace: kubernetes
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017 
        volumeMounts:   
        - name: mongodb-storage
          mountPath: /data/db

       # this is for defining the volume that we will use for the persistent volume claim
      volumes:     
      - name: mongodb-storage   
        persistentVolumeClaim:
          claimName: mongodb-pvc
