kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: kubernetes
spec:
  selector:
    app: backend
  ports:
    - port: 5001      # this is Service port
      targetPort: 5001 # this is Pod port
  type: ClusterIP
