kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: kubernetes
spec:
  selector:
    app: frontend
  ports:
    - port: 80        # this is Service port
      targetPort: 80  # this is Pod port
  type: ClusterIP
